--- a/css/absolute.css
+++ b/css/absolute.css
@@ -1,8 +1,8 @@
-#first-three{
+/* #first-three{
   position: absolute;
   top: 300px;
   left: 620px;
- 
+
 }
 
 #second-three{
@@ -10,9 +10,53 @@
   top: 400px;
   left: 620px;
 }
- 
+
 #third-three{
   position: absolute;
   top: 500px;
   left: 620px;
 }
+
+
+#snapchat {
+  margin-right: 20px;
+}
+
+#weather {
+ margin-right: 20px;
+ margin-left: 20px;
+
+}
+
+#angry-bird {
+  margin-left: 20px;
+}
+
+
+#facebook {
+  margin-right: 20px;
+}
+
+#mail {
+ margin-right: 20px;
+ margin-left: 20px;
+
+}
+
+#spotify {
+  margin-left: 20px;
+}
+#twitter{
+  margin-right: 20px;
+}
+
+#vsco {
+ margin-right: 20px;
+ margin-left: 20px;
+
+}
+
+#youtube {
+  margin-left: 20px;
+}
+ */
